--- a/style.css
+++ b/style.css
@@ -4,8 +4,28 @@
     color: #ffffff;
 }
 
+.container {
+    text-align: center;
+}
+
 form {
     margin-bottom: 30px;
+}
+
+input {
+    background-color: #444444;
+    padding: 8px 8px;
+    outline: none;
+    border: 2px solid #777777;
+    border-radius: 6px;
+}
+
+button {
+    margin-left: 4px;
+    padding: 8px 20px;
+    outline: none;
+    border: 2px solid #777777;
+    border-radius: 6px;
 }
 
 span {
