--- a/style.css
+++ b/style.css
@@ -28,8 +28,11 @@ button {
     border-radius: 6px;
 }
 
-span {
-    font-weight: 600;
+span:before {
+    content: "•";
+    font-size: 20px;
+    vertical-align: middle;
+    padding-right: 2px;
 }
 
 p {
